Fixed login form style, removed overflow in logModifier table

--- a/src/app/components/log-modifier/log-modifier.component.scss
+++ b/src/app/components/log-modifier/log-modifier.component.scss
@@ -43,7 +43,8 @@ mat-checkbox {
 
 .container {
     width: 90%;
-    overflow-y: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
     margin: auto;
 }
 
