--- a/src/app/components/login-username/login-username.component.scss
+++ b/src/app/components/login-username/login-username.component.scss
@@ -14,6 +14,7 @@ input.example-right-align::-webkit-inner-spin-button {
 
 input.example-right-align {
     -moz-appearance: textfield;
+    appearance: textfield;
 }
 
 #form-background {
